# tsgen

./: .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: pipeline.yml
demo/: demo_tsgen.ipynb
docs/source/: api_reference.rst  conf.py  index.rst
sample/: demo_tsgen.ipynb
tests/: test_generators.py  test_time_serie.py
tsgen/: __init__.py  generators.py  time_serie.py
