[tool.poetry]
name = "tsgen"
version = "0.2.0"
description = "Time Series Generator"
authors = ["Marwan Debbiche <marwan.debbiche@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.3"
numpy = "^1.19.2"
coverage = "^5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
jupyter = "^1.0.0"
pylint = "^2.6.0"
black = "^20.8b1"
mypy = "^0.790"
pre-commit = "^2.7.1"
data-science-types = "^0.2.19"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
