[tool.poetry]
name = "tsgen"
version = "0.4.0"
description = "Time Series Generator"
authors = ["Marwan Debbiche <marwan.debbiche@gmail.com>"]
license = "MIT"
homepage = "https://github.com/MarwanDebbiche/tsgen"
repository = "https://github.com/MarwanDebbiche/tsgen"
readme = "README.md"
keywords = ["time-series", "data-science", "time-series-analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.3"
numpy = "^1.19.2"
coverage = "^5.3"
matplotlib = {version = "^3.3.2", extras = ["matplotlib"]}

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pylint = "^2.6.0"
black = "^20.8b1"
mypy = "^0.790"
pre-commit = "^2.7.1"
coveralls = "^2.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
